# boogy-catalog

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
crates/catalog/: README.md
crates/catalog/email-sender/: Cargo.toml  README.md  boogy.toml
crates/catalog/email-sender/email-core/: Cargo.toml
crates/catalog/email-sender/email-core/src/: lib.rs
crates/catalog/email-sender/src/: jobs.rs  lib.rs  models.rs
crates/catalog/govern-base/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  boogy.toml
crates/catalog/govern-base/govern-base-core/: Cargo.toml
crates/catalog/govern-base/govern-base-core/src/: lib.rs
crates/catalog/govern-base/src/: admin.rs  comments.rs  execution.rs  lib.rs  lifecycle.rs  mcp.rs  models.rs  proposals.rs  sponsor.rs  voting.rs  ws.rs
crates/catalog/resend-base/: AGENTS.md  Cargo.toml  README.md  boogy.toml
crates/catalog/resend-base/resend-base-core/: Cargo.toml
crates/catalog/resend-base/resend-base-core/src/: lib.rs
crates/catalog/resend-base/src/: jobs.rs  lib.rs  models.rs
crates/catalog/stripe-base/: AGENTS.md  Cargo.toml  README.md  boogy.toml
crates/catalog/stripe-base/src/: jobs.rs  lib.rs  models.rs
crates/catalog/stripe-base/stripe-base-core/: Cargo.toml
crates/catalog/stripe-base/stripe-base-core/src/: lib.rs
crates/catalog/stripe-gateway/: Cargo.toml  README.md  boogy.toml  build.rs
crates/catalog/stripe-gateway/src/: jobs.rs  lib.rs  models.rs
crates/catalog/stripe-gateway/stripe-core/: Cargo.toml
crates/catalog/stripe-gateway/stripe-core/src/: lib.rs
crates/catalog/wallet-base/: Cargo.toml  README.md  boogy.toml
crates/catalog/wallet-base/src/: admin.rs  btc.rs  cosmos.rs  integration_checklist.rs  jobs.rs  lib.rs  mcp.rs  models.rs  rpc_client.rs  solana.rs
crates/catalog/wallet-base/wallet-base-core/: Cargo.toml
crates/catalog/wallet-base/wallet-base-core/src/: guardrails.rs  lib.rs  nonce.rs  subject.rs  types.rs
crates/catalog/wallet-base/wallet-base-core/src/btc/: address.rs  coinselect.rs  mod.rs  rpc.rs  tx.rs
crates/catalog/wallet-base/wallet-base-core/src/cosmos/: address.rs  mod.rs  rpc.rs  tx.rs
crates/catalog/wallet-base/wallet-base-core/src/evm/: address.rs  mod.rs  rpc.rs  tx.rs
crates/catalog/wallet-base/wallet-base-core/src/solana/: address.rs  mod.rs  rpc.rs  tx.rs
crates/catalog/wallet-base/wallet-base-core/tests/: adversarial.rs  btc_vectors.rs  cosmos_vectors.rs  cross_chain.rs  evm_vectors.rs  solana_vectors.rs
