# Public workspace root for the Boogy catalog. This overlay is added on top
# of the catalog crate dirs to form a standalone, buildable workspace: the
# crates pull `boogy-sdk` + `boogy-wit` as git deps from the public SDK repo
# (see each crate's Cargo.toml), and a per-crate build.rs syncs the WIT files
# matching that SDK revision so `wit_bindgen::generate!` always resolves.
[workspace]
resolver = "2"
members = [
    "crates/catalog/resend-base",
    "crates/catalog/resend-base/resend-base-core",
    "crates/catalog/stripe-gateway",
    "crates/catalog/stripe-gateway/stripe-core",
]

[workspace.dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", default-features = false, features = ["derive"] }
