[package]
name = "resend-base"
version = "0.1.0"
edition = "2021"
description = "Catalog service: a BYO-key Resend transactional-email wrapper (templated send + per-owner message log)."

[dependencies]
boogy-sdk = { git = "https://github.com/Boogy-ai/boogy-sdk" }
# Pure, host-testable logic (template render, Resend body shaping) lives in
# the sibling resend-base-core crate; its unit tests run via `cargo test --workspace`.
resend-base-core = { path = "resend-base-core" }
wit-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

[lib]
# cdylib only — wasm component output. `wit_bindgen::generate!` emits
# wasm-component-only symbols that don't host-link, so adding `rlib` here
# breaks `cargo test --workspace`. Host-testable pure logic lives in
# resend-base-core (rlib).
crate-type = ["cdylib"]

[build-dependencies]
# build.rs syncs the WIT files matching this SDK revision into ./wit so
# wit_bindgen::generate! (manifest-relative literal path) always resolves.
boogy-wit = { git = "https://github.com/Boogy-ai/boogy-sdk" }
