[package]
name = "wallet-base-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = "0.4"
base64 = "0.22"
alloy-consensus = "1"
alloy-eips = "1"
alloy-primitives = "1"
alloy-rlp = "0.3"
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }
# Cosmos tx-building types (SignDoc/Body/AuthInfo/...) WITHOUT the RPC/gRPC
# network client (default-features = false drops bip32 + getrandom too; we only
# need the pure proto/encoding types). External-signer: we never sign locally.
cosmrs = { version = "0.22", default-features = false }
bech32 = "0.11"
sha2 = { workspace = true }
ripemd = "0.1"
# Solana tx-building types (Pubkey / Message / Transaction) WITHOUT any local
# keypair-signing path — external-signer only. Curve is Ed25519: the signature is
# a raw 64-byte sig over the serialized Message (no recovery id, no r/s split).
# `default-features = false` everywhere it still compiles for wasm32-wasip2 (no
# getrandom / no native deps); features pinned to the spike-verified minimal set.
# NEVER add solana-keypair/solana-signer or enable solana-transaction/wincode —
# those pull in local signing.
bs58 = "0.5"
bincode = "1.3"
solana-pubkey = "4"
solana-hash = "4"
solana-instruction = "3"
solana-message = { version = "4", default-features = false, features = ["wincode", "serde"] }
solana-transaction = { version = "4", default-features = false, features = ["serde"] }
solana-system-interface = { version = "3", default-features = false, features = ["bincode"] }
solana-signature = "3"
# Bitcoin tx-building types (Address / Transaction / SighashCache) + secp256k1
# (transitively pinned to 0.29.1). External-signer ONLY: we never gen/sign keys,
# so `rand` / `global-context` / `secp-recovery` / `serde` stay OFF. P2WPKH is
# UTXO-based — N inputs → N BIP143 sighashes → N secp256k1 signatures.
bitcoin = { version = "=0.32.10", default-features = false, features = ["std"] }
